[tool.poetry]
name = "health_model"
version = "0.1.0"
description = ""
authors = ["papagorgio23 <jason@aisportsfirm.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
